--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ crossterm = "0.27"
 tokio = { version = "1.37", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 chrono = "0.4"
+reqwest = { version = "0.11", features = ["json", "stream"] }
+serde_json = "1.0"
+futures = "0.3.31"
