--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ chrono = "0.4"
 reqwest = { version = "0.11", features = ["json", "stream"] }
 serde_json = "1.0"
 futures = "0.3.31"
+dotenv = "0.15.0"
